# cargo-self

./: .gitignore  .selfignore  Cargo.toml  README.md  constitution.md
.self/: .self.md  Cargo.lock.md  Cargo.toml.md  README.md.md  constitution.md.md  output.json.md  src.md
.self/src/: cli.md  engine.md  lib.rs.md  main.rs.md  main.rs.self
.self/src/cli/: constitution.md.md  mod.rs.md  tool.rs.md
.self/src/engine/: constitution.rs.md  dynamic.rs.md  element.rs.md  json_persistence.rs.md  mod.rs.md  model.rs.md  persistence.rs.md  planner.rs.md  prompts.rs.md  state.rs.md  version.rs.md
src/: main.rs
src/cli/: tool.rs
src/engine/: constitution.rs  dynamic.rs  element.rs  json_persistence.rs  mod.rs  model.rs  persistence.rs  planner.rs  prompts.rs  state.rs
