[package]
name = "cargo-self"
version = "0.1.6"
edition = "2021"
description = "A tool to build and install a package using cargo enhanced with LLM models."
license = "MIT AND Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.14.3"
cargo = "0.74.0"
clap = { version = "4.4.6", features = ["derive"] }
dotenv = "0.15.0"
handlebars = "4.4.0"
ignore = "0.4.20"
polodb_core = "4.4.0"
serde = "1.0.189"
serde_json = "1.0.107"
sha2 = "0.10.8"
tokio = { version = "1.33.0", features = ["full"] }
walkdir = "2.4.0"
